computed-semver/engine-fixtures/machinery/governed-namespace-requires-claim/resources.yaml
apiVersion: v1
kind: Pod
metadata: { name: unclaimed-governed, namespace: governed-ns }
spec:
  initContainers: [{ name: setup, image: busybox, securityContext: { privileged: true } }]
  containers: [{ name: c, image: nginx, securityContext: { privileged: true } }]
---
apiVersion: v1
kind: Pod
metadata: { name: claimed-governed, namespace: governed-ns, labels: { "policy-as-versioned.dev/policy-version": "5.0.0" } }
spec:
  containers: [{ name: c, image: nginx }]
